force-app/main/default/objects/Info_Vehicle__c/Info_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Info Vehicle</label>
    <pluralLabel>Info Vehicles</pluralLabel>
    <nameField>
        <label>Vehicle Record</label>
        <type>AutoNumber</type>
        <displayFormat>VH-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>