force-app/main/default/objects/Info_Vehicle__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <label>Chassis Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>