force-app/main/default/objects/Info_Vehicle__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <label>Engine Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>