force-app/main/default/objects/Info_Vehicle__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <label>Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>