force-app/main/default/objects/Info_Vehicle__c/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>