force-app/main/default/objects/Info_Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
            <value>
                <fullName>Four Wheeler</fullName>
            </value>
            <value>
                <fullName>Heavy Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>